--- a/natours/index.html
+++ b/natours/index.html
@@ -17,19 +17,19 @@
   </head>
   <body>
     <header class="header">
-      <div class="logo-box">
+      <div class="header__logo-box">
         <!-- Use alt for SEO and screen-readers -->
-        <img src="img/logo-white.png" alt="Logo" class="logo" />
+        <img src="img/logo-white.png" alt="Logo" class="header__logo" />
       </div>
 
-      <div class="text-box">
+      <div class="header__text-box">
         <!-- h1 is the most important heading for SEO to determine what the page is all about -->
         <h1 class="heading-primary">
           <!-- We use a span element to give more content to h1 for SEO whilst allowing it to be styled by sections -->
-          <span class="heading-primary-main">Outdoors</span>
-          <span class="heading-primary-sub">is where life happens</span>
+          <span class="heading-primary--main">Outdoors</span>
+          <span class="heading-primary--sub">is where life happens</span>
         </h1>
-        <a href="#" class="btn btn-white btn-animated">Discover our tours</a>
+        <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
   </body>
