--- a/natours/index.html
+++ b/natours/index.html
@@ -87,12 +87,49 @@
         <div class="row">
           <div class="col-1-of-4">
             <div class="feature-box">
-              <i class="feature_box__icon icon-basic-world"></i>
+              <i class="feature-box__icon icon-basic-world"></i>
               <h3 class="heading-tertiary u-margin-bottom-small">
                 Explore the world
               </h3>
               <p class="feature-box__text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+                mollitia veritatis sint error nihil cupiditate.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Meet nature
+              </h3>
+              <p class="feature-box__text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Consectetur, officiis tempora vitae obcaecati nostrum.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Find your way
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+                harum eaque quia hic neque saepe accusantium.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Live a healthier life
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
+                sunt praesentium quisquam magni.
               </p>
             </div>
           </div>
