WIP: popup self-implementation

--- a/natours/index.html
+++ b/natours/index.html
@@ -427,6 +427,19 @@
         </div>
       </div>
     </footer>
+
+    <div class="popup">
+      <div class="popup__content">
+        <div class="popup__images">
+          <img src="img/nat-8.jpg" alt="Girl in boat" class="popup__images--1">
+          <img src="img/nat-9.jpg" alt="Man on mountain" class="popup__images--2">
+        </div>
+          
+        <div class="popup__text">
+          TEXT
+        </div>
+      </div>
+    </div>
     <!--
       <section class="grid-test">
         <div class="row">
