--- a/natours/index.html
+++ b/natours/index.html
@@ -435,8 +435,13 @@
           <img src="img/nat-9.jpg" alt="Man on mountain" class="popup__images--2">
         </div>
           
-        <div class="popup__text">
-          TEXT
+        <div class="popup__text">        
+          <h2 class="heading-secondary u-margin-bottom-small">
+            Start booking now
+          </h2>
+          <h3 class="heading-tertiary">
+            Important - please read the Terms and Conditions first
+          </h3>
         </div>
       </div>
     </div>
