--- a/natours/index.html
+++ b/natours/index.html
@@ -154,7 +154,7 @@
         </div>
       </section>
 
-      <section class="section-tours">
+      <section class="section-tours" id="section-tours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Most popular tours
@@ -189,7 +189,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$297</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -221,7 +221,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$497</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -253,7 +253,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$897</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -335,7 +335,7 @@
         </div>
       </section>
 
-      <section class="section-book">
+      <section class="section-book" id="section-book">
         <div class="row">
           <div class="book">
             <div class="book__form">
@@ -428,19 +428,20 @@
       </div>
     </footer>
 
-    <div class="popup">
+    <div class="popup" id="popup">
       <div class="popup__content">
         <div class="popup__left">
           <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
           <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
         </div>
         <div class="popup__right">
+          <a href="#section-tours" class="popup__close">&times;</a>
           <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
           <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
           <p class="popup__text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae culpa rem dolore, accusantium quas explicabo! Laboriosam soluta laudantium earum asperiores animi repellat suscipit molestias. Nulla delectus similique cumque dolorem explicabo! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur molestiae corporis sit. Omnis, nisi commodi fugit quae placeat tenetur vero et quaerat harum incidunt rerum, modi architecto molestiae nesciunt consectetur.
           </p>
-          <a href="#" class="btn btn--green">Book now</a>
+          <a href="#section-book" class="btn btn--green">Book now</a>
         </div>
         <!--<div class="popup__images">
           <img src="img/nat-8.jpg" alt="Girl in boat" class="popup__images--1">
