--- a/natours/index.html
+++ b/natours/index.html
@@ -82,21 +82,26 @@
           </div>
           <div class="col-1-of-2">
             <div class="composition">
-              <img
-                src="img/nat-1-large.jpg"
-                alt="Photo 1"
-                class="composition__photo composition__photo--p1"
-              />
-              <img
-                src="img/nat-2-large.jpg"
-                alt="Photo 2"
-                class="composition__photo composition__photo--p2"
-              />
-              <img
-                src="img/nat-3-large.jpg"
-                alt="Photo 3"
-                class="composition__photo composition__photo--p3"
-              />
+            <!-- Resolution Switching using the width descriptor allows us to tell the browser the
+              dimensions of the images prior to download. We combine that with the sizes attribute
+              to inform the browser about the approximate width of the image at different viewport widths.
+              the browser then determines the correct image to use. 
+              We also include the old src attribute to support older browsers. -->
+              <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
+              sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+              alt="Photo 1"
+              class="composition__photo composition__photo--p1"
+              src="img/nat-1-large.jpg">
+              <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w"
+              sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+              alt="Photo 2"
+              class="composition__photo composition__photo--p2"
+              src="img/nat-2-large.jpg">
+              <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w"
+              sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+              alt="Photo 3"
+              class="composition__photo composition__photo--p3"
+              src="img/nat-3-large.jpg">
             </div>
           </div>
         </div>
@@ -412,8 +417,9 @@
           <!-- The source element allows us to specify a media query attribute which we use
             here for the art direction for small screens -->
           <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x" media="(max-width: 37.5em)">
-            <!-- This is an example of image density switching. 1x is for low-res screens , 2x is for high res screens-->
-          <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Full logo">
+            <!-- This is an example of image density switching. 1x is for low-res screens , 2x is for high res screens.
+            We should also provide the old src attribute for older browsers that may not support the srcset attribute. -->
+          <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Full logo" src="img/logo-green-2x.png">
         </picture>
       </div>
       <div class="row">
