Wrapping up the Natours Project: Final Considerations

--- a/natours/index.html
+++ b/natours/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- The meta name="viewport" with content as defined below is essential for responsive websites -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link
@@ -9,8 +10,10 @@
       rel="stylesheet"
     />
 
-    <!--link rel="stylesheet" href="css/icon-font.css" /-->
-    <link rel="stylesheet" href="css/style.css" />
+    <!--link rel="stylesheet" href="css/icon-font.css" />
+    <link rel="stylesheet" href="css/style.css" /-->
+    <link rel="stylesheet" href="css/style.min.css" />
+
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
     <title>Natours | Exciting tours for adventurous people</title>
