Adds phone-sm media target and improves phone-sm popup

--- a/natours/index.html
+++ b/natours/index.html
@@ -10,9 +10,9 @@
       rel="stylesheet"
     />
 
-    <!--link rel="stylesheet" href="css/icon-font.css" />
-    <link rel="stylesheet" href="css/style.css" /-->
-    <link rel="stylesheet" href="css/style.min.css" />
+    <link rel="stylesheet" href="css/icon-font.css" />
+    <link rel="stylesheet" href="css/style.css" /
+    <!-- <link rel="stylesheet" href="css/style.min.css" /> -->
 
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
@@ -459,7 +459,7 @@
           <p class="popup__text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae culpa rem dolore, accusantium quas explicabo! Laboriosam soluta laudantium earum asperiores animi repellat suscipit molestias. Nulla delectus similique cumque dolorem explicabo! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur molestiae corporis sit. Omnis, nisi commodi fugit quae placeat tenetur vero et quaerat harum incidunt rerum, modi architecto molestiae nesciunt consectetur.
           </p>
-          <a href="#section-book" class="btn btn--green">Book now</a>
+          <a href="#section-book" class="btn btn--green popup__btn">Book now</a>
         </div>
       </div>
     </div>
