Responsive heading improvements

--- a/natours/index.html
+++ b/natours/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
 
-    <!-- <link rel="stylesheet" href="css/icon-font.css" /> -->
+    <link rel="stylesheet" href="css/icon-font.css" />
     <link rel="stylesheet" href="css/style.css" />
 
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
@@ -56,7 +56,7 @@
     <main>
       <section class="section-about">
         <!-- re-usable utility classes -->
-        <div class="u-center-text u-margin-bottom-big">
+        <div class="u-center-text u-margin-bottom-big u-padding-lr-medium">
           <h2 class="heading-secondary">
             Exciting tours for adventurous people
           </h2>
@@ -162,7 +162,7 @@
       </section>
 
       <section class="section-tours" id="section-tours">
-        <div class="u-center-text u-margin-bottom-big">
+        <div class="u-center-text u-margin-bottom-big u-padding-lr-medium">
           <h2 class="heading-secondary">
             Most popular tours
           </h2>
@@ -281,7 +281,7 @@
             Your browser is not supported!
           </video>
         </div>
-        <div class="u-center-text u-margin-bottom-big">
+        <div class="u-center-text u-margin-bottom-big u-padding-lr-medium">
           <h2 class="heading-secondary">
             We make people genuinely happy
           </h2>
